<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GraphTV</string>
    <string name="action_settings">Settings</string>
    <string name="sNo">S no.</string>
    <string name="product">Product</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="runtime">Runtime</string>
    <string name="rating">Rating</string>
    <string name="votes">Votes</string>
    <string name="genres">Genres</string>
    <string name="episodes">Episodes</string>
    <string name="please_type_a_tv_series_name">Please Type a TV Series Name</string>
    <string name="graphtv_and_friends">GraphTV (and friends)</string>
    <string name="about_info_1">Various search functions and displays</string>
    <string name="about_info_1b">for Internet Movie Database (IMDB) data.</string>
    <string name="about_info_2">Press a tab below to get started.</string>
    <string name="written_by">Written by Marc Goodman as an example project for CIS 234A, Real World Programming.</string>
    <string name="info">Info</string>
    <string name="title_search">Title Search</string>
    <string name="top_rated">Top Rated</string>
    <string name="series_title">Series Title</string>
    <string name="title_type">Type</string>
    <string name="year">Year</string>

</resources>